--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -82,3 +82,26 @@ body {
 .footer {
     background-color: #F1F1F1;
 }
+
+.table {
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+.table-row-header {
+    background-color: var(--blue);
+    color: white;
+}
+
+.table-cell {
+    padding: 5px 20px 5px 5px;
+    text-align: left;
+}
+
+.table-cell:last-child {
+    padding-right: 5px;
+}
+
+.table-row-body:nth-child(even) {
+    background-color: var(--light-blue);
+}
