--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -88,20 +88,24 @@ body {
     border: 1px solid black;
 }
 
-.table-row-header {
+.table-header-cell {
     background-color: var(--blue);
     color: white;
-}
-
-.table-cell {
-    padding: 5px 20px 5px 5px;
     text-align: left;
 }
 
-.table-cell:last-child {
+.table-horizontal-cell {
+    padding: 5px 20px 5px 5px;
+}
+
+.table-horizontal-cell:last-child {
     padding-right: 5px;
 }
 
-.table-row-body:nth-child(even) {
+.table-body-row:nth-child(even) {
     background-color: var(--light-blue);
+}
+
+.table-vertical-cell {
+    padding: 5px;
 }
