--- a/src/main/resources/templates/fragments/student-table.html
+++ b/src/main/resources/templates/fragments/student-table.html
@@ -8,21 +8,21 @@
 <body>
 
 <table th:fragment="student-table(students)" class="table">
-    <thead class="table-header">
-    <tr class="table-row-header">
-        <th class="table-cell">Matricule</th>
-        <th class="table-cell">Nom</th>
-        <th class="table-cell">Genre</th>
-        <th class="table-cell">Section</th>
+    <thead>
+    <tr>
+        <th class="table-header-cell table-horizontal-cell">Matricule</th>
+        <th class="table-header-cell table-horizontal-cell">Nom</th>
+        <th class="table-header-cell table-horizontal-cell">Genre</th>
+        <th class="table-header-cell table-horizontal-cell">Section</th>
     </tr>
     </thead>
 
-    <tbody class="table-body">
-    <tr th:each="student : ${students}" class="table-row-body">
-        <td th:text="${student.number}" class="table-cell">number</td>
-        <td th:text="${student.name}" class="table-cell">name</td>
-        <td th:text="${student.gender}" class="table-cell">gender</td>
-        <td th:text="${student.section}" class="table-cell">section</td>
+    <tbody>
+    <tr th:each="student : ${students}" class="table-body-row">
+        <td th:text="${student.number}" class="table-horizontal-cell">number</td>
+        <td th:text="${student.name}" class="table-horizontal-cell">name</td>
+        <td th:text="${student.gender}" class="table-horizontal-cell">gender</td>
+        <td th:text="${student.section}" class="table-horizontal-cell">section</td>
     </tr>
     </tbody>
 </table>
