--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -21,7 +21,8 @@
         <tbody>
         <tr th:each="course : ${courses}" class="table-body-row">
             <td class="table-horizontal-cell">
-                <a th:href="@{/courses/{acronym}(acronym=${course.acronym})}" th:text="${course.acronym}" class="link nav-link">
+                <a th:href="@{/courses/{acronym}(acronym=${course.acronym})}" th:text="${course.acronym}"
+                   class="link nav-link">
                     acronym
                 </a>
             </td>
@@ -30,6 +31,23 @@
         </tr>
         </tbody>
     </table>
+
+    <form th:action="@{/courses/add-course}" th:object="${course}" method="post" class="form">
+        <h3 class="form-title">Ajouter un nouveau cours</h3>
+        <div class="form-input-wrapper">
+            <label for="acronym">Sigle</label>
+            <input th:field="*{acronym}" id="acronym" type="text" placeholder="Entrez le sigle du cours">
+        </div>
+        <div class="form-input-wrapper">
+            <label for="title">Titre</label>
+            <input th:field="*{title}" id="title" type="text" placeholder="Entrez le titre du cours">
+        </div>
+        <div class="form-input-wrapper">
+            <label for="credits">ECTS</label>
+            <input th:field="*{credits}" id="credits" type="number" placeholder="Entrez le nombre d'ECTS du cours">
+        </div>
+        <button type="submit">Ajouter</button>
+    </form>
 </main>
 </body>
 </html>
