feat: création d'une méthode getLabel
JPA utilse la représentation sous forme de chaine de caractère de chaque valeur de l'énumération, il est donc important de ne pas redéfinir la méthode toString qui elle aussi renvoie la représentation des valeurs sous forme de chaine et ce au même format que JPA. Permet de ne pas avoir des erreurs violation de contraintes sql si on rajoute un nouvel étudiant

--- a/src/main/resources/templates/fragments/student-table.html
+++ b/src/main/resources/templates/fragments/student-table.html
@@ -26,7 +26,7 @@
         </td>
         <td th:text="${student.name}" class="table-horizontal-cell">name</td>
         <td th:text="${student.gender}" class="table-horizontal-cell">gender</td>
-        <td th:text="${student.section}" class="table-horizontal-cell">section</td>
+        <td th:text="${student.section.getLabel()}" class="table-horizontal-cell">section</td>
     </tr>
     </tbody>
 </table>
