--- a/src/main/resources/templates/student-detail.html
+++ b/src/main/resources/templates/student-detail.html
@@ -25,7 +25,7 @@
         </tr>
         <tr class="table-body-row">
             <th class="table-header-cell table-vertical-cell">Section</th>
-            <td th:text="${student.section}" class="table-vertical-cell">section</td>
+            <td th:text="${student.section.getLabel()}" class="table-vertical-cell">section</td>
         </tr>
         </tbody>
     </table>
