--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -10,6 +10,28 @@
 <main layout:fragment="content">
     <h2 class="content-title">Liste des étudiants</h2>
     <table th:replace="~{/fragments/student-table::student-table(students=${students})}"></table>
+    <form th:action="@{/students/add-student}" th:object="${student}" method="post" class="form">
+        <h3 class="form-title">Ajouter un étudiant</h3>
+        <div class="form-wrapper">
+            <div class="form-input-wrapper">
+                <label for="name">Nom</label>
+                <input th:field="*{name}" type="text" id="name">
+            </div>
+            <div class="form-input-wrapper">
+                <label for="gender">Genre</label>
+                <select th:field="*{gender}" id="gender">
+                    <option th:each="gender : ${genders}" th:value="${gender}" th:text="${gender}">gender</option>
+                </select>
+            </div>
+            <div class="form-input-wrapper">
+                <label for="section">Section</label>
+                <select th:field="*{section}" id="section">
+                    <option th:each="section : ${sections}" th:value="${section}" th:text="${section.getLabel()}">section</option>
+                </select>
+            </div>
+            <button type="submit" class="form-btn">Ajouter</button>
+        </div>
+    </form>
 </main>
 </body>
 </html>
