feat: amélioration nom lien vers la page de cours dans la page d'un détail de cours

--- a/src/main/resources/templates/course-detail.html
+++ b/src/main/resources/templates/course-detail.html
@@ -27,7 +27,7 @@
     </table>
 
     <table th:replace="~{/fragments/student-table::student-table(students=${course.students})}"></table>
-    <p>Retour à la page de <a th:href="@{/courses}" class="link nav-link">précédente</a></p>
+    <p>Retour à <a th:href="@{/courses}" class="link nav-link">liste des cours</a></p>
 </main>
 </body>
 </html>
