feat: ajout d'un lien retour vers la liste des étudiants

--- a/src/main/resources/templates/student-detail.html
+++ b/src/main/resources/templates/student-detail.html
@@ -31,6 +31,8 @@
     </table>
 
     <table th:replace="fragments/course-table::course-table(courses=${student.courses})"></table>
+
+    <p>Retour à <a th:href="@{/students}" class="link nav-link">liste des étudiants</a></p>
 </main>
 </body>
 </html>
