feat: création du style css pour les erreurs et message de succès des formulaires

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -145,3 +145,16 @@ body {
     padding: 5px;
     cursor: pointer;
 }
+
+.form-success-msg {
+    padding: 5px;
+    background: #F1F1F1;
+    color: var(--blue);
+    font-weight: bold;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.input-error-msg {
+    color: red;
+}
